# CTF-solutions

./: README.md
2023/BHMEA-QUALS/: server1
2023/backdoor/: flag.txt
2023/tp/: log.pkl  teleports.pkl  vs.pkl  walls.pkl
2024/0ctf/: secure_encryption
2024/CPCTF/: key_expansion.py  problem.py
2024/defcamp/: Writeup_conv.docx  ctr_writeup_bi0s.docx  solve.py
2024/defcon-quals/: shiny-shells.tar
2024/integrity/: pem_to.py
2024/ugra/: uneasy.py
2024/umass/: a.txt
2025/bhmea-quals/: hatagawa_1_solve.py  (+2 more)
2025/enowars/syncryn1z3/: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  cleanup.py  docker-compose.yml  entrypoint.sh  nginx.conf
2025/enowars/syncryn1z3/client/: .gitignore  README.md  build.py  ptp_client.py  ptp_message.py  requirements.txt
2025/enowars/syncryn1z3/lib/: CMakeLists.txt
2025/enowars/syncryn1z3/lib/include/: json.h
2025/enowars/syncryn1z3/src/: CMakeLists.txt  main.c
2025/enowars/syncryn1z3/src/common/: common_types.h
2025/enowars/syncryn1z3/src/db/: CMakeLists.txt  db.c  db.h
2025/enowars/syncryn1z3/src/http/: CMakeLists.txt  http.c  http.h
2025/enowars/syncryn1z3/src/http/tasks/: CMakeLists.txt  http_tasks.c  http_tasks.h
2025/enowars/syncryn1z3/src/ptp/: CMakeLists.txt  ptp.c  ptp.h  ptp_defaults.h  ptp_helper.h
2025/enowars/syncryn1z3/src/ptp/protocol/: CMakeLists.txt  ptp_constants.h  ptp_decoded.h  ptp_decoding.c  ptp_encoded.h  ptp_encoding.c  ptp_protocol.h
2025/enowars/syncryn1z3/src/ptp/security/: CMakeLists.txt  ptp_security.c  ptp_security.h
2025/enowars/syncryn1z3/src/ptp/tasks/: CMakeLists.txt  ptp_tasks.c  ptp_tasks.h
2025/enowars/syncryn1z3/src/udp/: CMakeLists.txt  udp.c  udp.h
2025/enowars/syncryn1z3/src/util/: base64.h  error.h  mempool.h  ring.h  time.h
2025/enowars/syncryn1z3/static/: index.html  main.css  main.js
(+1123 files in other folders)
